Updated error handling code

--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "node-express-dbconnection",
-  "description": "A basic and lean recipe for connecting to MongoDB in a node express server.",
+  "name": "node-express-error-routing",
+  "description": "A basic and lean recipe for implementing error routing in a node express server.",
   "version": "1.0.0",
   "author": "benjaminvickers",
   "license": "ISC",
-  "homepage": "https://github.com/benjaminvickers/node-express-dbconnection#readme",
+  "homepage": "https://github.com/benjaminvickers/node-express-error-routing#readme",
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=dev node ./bin/www"
   },
   "dependencies": {
     "ejs": "^2.3.4",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "mongoose": "^4.3.5"
+    "express": "~4.13.1"
   },
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/benjaminvickers/node-express-dbconnection.git"
+    "url": "git+https://github.com/benjaminvickers/node-express-error-routing.git"
   },
   "bugs": {
-    "url": "https://github.com/benjaminvickers/node-express-dbconnection/issues"
+    "url": "https://github.com/benjaminvickers/node-express-error-routing/issues"
   }
 }
